# pods.erf.couchdb

./: CMakeLists.txt  README
src/: couchdb.cpp  couchdb.hpp  exceptions.cpp  exceptions.hpp  utils.cpp  utils.hpp
test/: CMakeLists.txt  test_couchdb_api.cpp
